--- a/AlmarERP/nbproject/project.properties
+++ b/AlmarERP/nbproject/project.properties
@@ -27,11 +27,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/AlmarERP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.1\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.34-bin.jar=librerias\\mysql-connector-java-5.1.34-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.34-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.34-bin.jar}:\
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
