--- a/AlmarERP/nbproject/project.properties
+++ b/AlmarERP/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=AlmarERP
+application.vendor=Alberto
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,15 +27,48 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/AlmarERP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.antlr-2.7.7.jar=lib\\antlr-2.7.7.jar
+file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
+file.reference.dom4j-1.6.1.jar=lib\\dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-4.0.1.Final.jar=lib\\hibernate-commons-annotations-4.0.1.Final.jar
+file.reference.hibernate-core-4.1.0.Final.jar=lib\\hibernate-core-4.1.0.Final.jar
+file.reference.hibernate-entitymanager-4.1.0.Final.jar=lib\\hibernate-entitymanager-4.1.0.Final.jar
+file.reference.hibernate-envers-4.1.0.Final.jar=lib\\hibernate-envers-4.1.0.Final.jar
+file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar=lib\\hibernate-jpa-2.0-api-1.0.1.Final.jar
+file.reference.hibernate-validator-4.3.0.Final.jar=lib\\hibernate-validator-4.3.0.Final.jar
+file.reference.hibernate-validator-annotation-processor-4.3.0.Final.jar=lib\\hibernate-validator-annotation-processor-4.3.0.Final.jar
+file.reference.javassist-3.15.0-GA.jar=lib\\javassist-3.15.0-GA.jar
+file.reference.jboss-logging-3.1.0.CR2.jar=lib\\jboss-logging-3.1.0.CR2.jar
+file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=lib\\jboss-transaction-api_1.1_spec-1.0.0.Final.jar
+file.reference.joda-time-1.6.jar=lib\\joda-time-1.6.jar
+file.reference.jsoup-1.6.1.jar=lib\\jsoup-1.6.1.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.1\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
-file.reference.mysql-connector-java-5.1.34-bin.jar=librerias\\mysql-connector-java-5.1.34-bin.jar
+file.reference.mysql-connector-java-5.1.5-bin.jar=lib\\mysql-connector-java-5.1.5-bin.jar
+file.reference.org.springframework.core-3.1.2.RELEASE.jar=lib\\org.springframework.core-3.1.2.RELEASE.jar
+file.reference.validation-api-1.0.0.GA.jar=lib\\validation-api-1.0.0.GA.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.34-bin.jar}:\
-    ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-4.0.1.Final.jar}:\
+    ${file.reference.hibernate-core-4.1.0.Final.jar}:\
+    ${file.reference.hibernate-entitymanager-4.1.0.Final.jar}:\
+    ${file.reference.hibernate-envers-4.1.0.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.0-api-1.0.1.Final.jar}:\
+    ${file.reference.hibernate-validator-4.3.0.Final.jar}:\
+    ${file.reference.hibernate-validator-annotation-processor-4.3.0.Final.jar}:\
+    ${file.reference.javassist-3.15.0-GA.jar}:\
+    ${file.reference.jboss-logging-3.1.0.CR2.jar}:\
+    ${file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar}:\
+    ${file.reference.joda-time-1.6.jar}:\
+    ${file.reference.jsoup-1.6.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.5-bin.jar}:\
+    ${file.reference.org.springframework.core-3.1.2.RELEASE.jar}:\
+    ${file.reference.validation-api-1.0.0.GA.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -59,7 +93,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=pruebas.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
