--- a/AlmarERP/nbproject/project.properties
+++ b/AlmarERP/nbproject/project.properties
@@ -69,7 +69,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.5-bin.jar}:\
     ${file.reference.org.springframework.core-3.1.2.RELEASE.jar}:\
     ${file.reference.validation-api-1.0.0.GA.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -93,7 +94,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pruebas.Main
+main.class=almar.ventanas.VentanaLogin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
