--- a/AlmarERP/nbproject/project.properties
+++ b/AlmarERP/nbproject/project.properties
@@ -44,12 +44,13 @@ file.reference.jboss-logging-3.1.0.CR2.jar=lib\\jboss-logging-3.1.0.CR2.jar
 file.reference.jboss-transaction-api_1.1_spec-1.0.0.Final.jar=lib\\jboss-transaction-api_1.1_spec-1.0.0.Final.jar
 file.reference.joda-time-1.6.jar=lib\\joda-time-1.6.jar
 file.reference.jsoup-1.6.1.jar=lib\\jsoup-1.6.1.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Program Files\\NetBeans 8.0.1\\ide\\modules\\ext\\mysql-connector-java-5.1.23-bin.jar
 file.reference.mysql-connector-java-5.1.5-bin.jar=lib\\mysql-connector-java-5.1.5-bin.jar
 file.reference.org.springframework.core-3.1.2.RELEASE.jar=lib\\org.springframework.core-3.1.2.RELEASE.jar
 file.reference.validation-api-1.0.0.GA.jar=lib\\validation-api-1.0.0.GA.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
@@ -69,7 +70,6 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.5-bin.jar}:\
     ${file.reference.org.springframework.core-3.1.2.RELEASE.jar}:\
     ${file.reference.validation-api-1.0.0.GA.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -94,7 +94,20 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=almar.ventanas.VentanaLogin
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
